--- a/blocks/latest-resources/latest-resources.css
+++ b/blocks/latest-resources/latest-resources.css
@@ -80,6 +80,12 @@ main .latest-resources .card .card-thumb img {
     padding-top: 30px;
   }
 
+  .product .latest-resources-container h2,
+  .technology .latest-resources-container h2,
+  .application .latest-resources-container h2 {
+    font-size: 45px;
+  }
+
   main .carousel-wrapper.latest-resources-wrapper {
     width: 750px;
   }
@@ -130,13 +136,5 @@ main .latest-resources .card .card-thumb img {
   .technology .latest-resources-container h2,
   .application .latest-resources-container h2 {
     font-size: 36px;
-  }
-}
-
-@media(max-width: 991px) {
-  .product .latest-resources-container h2,
-  .technology .latest-resources-container h2,
-  .application .latest-resources-container h2 {
-    font-size: 45px;
   }
 }
